# skyjo

./: .pre-commit-config.yaml  .pre-commit-config.yaml   03_random_policy.ipynb  Makefile  README.md  pyproject.toml
.github/workflows/: checks.yml
notebooks/: 02_combinatorics.ipynb  02_simple_greedy_policy.ipynb  03_gliding_greedy_policy.ipynb  03_random_policy.ipynb  04_simple_greedy_policy.ipynb  05_gliding_greedy_policy.ipynb
skyjo/: environment.py  main.py
skyjo/policies/: gliding_greedy_policy.py  greedy_column.py  greedy_policy.py  policy.py  random_policy.py
tests/policies/: test_gliding_greedy_policy.py
