[tool.poetry]
name = "skyjo"
version = "0.1.0"
description = "Skyjo"
authors = ["Matej Kerekrety <matej.kerekrety@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.0.6"
jupyter-contrib-nbextensions = "^0.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
pytest = "^7.0.1"
black = "^22.1.0"
mypy = "^0.981"
bandit = "^1.7.3"
pytest-cov = "^3.0.0"
pre-commit = "^3.2.0"
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

